# nink-stroke-modeler

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  EventType.cs  LICENSE  MODULE.bazel  PositionModelerParams.cs  README.md  SamplingParams.cs  StrokeModeler.cs  StylusStateModelerParams.cs  Vec2.cs  WobbleSmootherParams.cs  docker-build.sh  nink-stroke-modeler.csproj  nink-stroke-modeler.sln
.github/workflows/: ci_cd.yml
src/: ext_iface.cc
